dist/LineScript-win64-20260615/tests/cases/compile_fail/for_step_zero_literal.lsc
main() -> i64 do
  for i in 0..10 step 0 do
    println(i)
  end
  return 0
end
